# viboplr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  DEVELOPMENT.md  MANAGED-DEPENDENCIES-PLAN.md  PLUGIN-API-REFERENCE.md  PLUGIN-SYSTEM.md  README.md  SHAREABLE-BUNDLES-PLAN.md  SPEC.md  TODO.md  WORKTREE_WORKFLOW.md  code-health-report.md  package-lock.json  package.json  ui-guidelines.md  vite.config.ts
.claude/: settings.json
.claude/rules/: backend.md  conventions.md  frontend.md  plugins.md  queue.md  site.md  testing.md  ui.md
.claude/skills/: architect.md  drag-and-drop.md  plugin-system.md
.github/workflows/: ci.yml  deploy-vps.yml  pages.yml  release.yml
benchmarks/: history.json  index.html
deploy/aptabase/: .env.example  README.md  docker-compose.yml
deploy/viboplr-site/: docker-compose.yml  nginx.conf
docs/: CNAME  download.html  features.html  features.json  help.html  history.html  index.html  install-mac.html  install-windows.html  now-playing-view-spec.md  plugin-dev.html  plugins.html  servers.html  skins.html  story.html  support.html
docs/.impeccable/: hook.cache.json
docs/brainstorms/: 2026-06-16-album-artist-tag-panel-requirements.md  2026-06-23-subsonic-unified-search-requirements.md  2026-07-05-profile-manager-requirements.md  2026-07-10-plugin-stability-status-requirements.md  2026-07-10-self-hosted-music-server-requirements.md
docs/css/: style.css
docs/js/: gallery.js  main.js  servers.js
docs/plans/: 2026-06-16-001-feat-album-artist-tag-panel-plan.md  2026-06-23-001-feat-subsonic-unified-search-plan.md  2026-07-05-001-feat-profile-manager-plan.md  2026-07-10-001-feat-bandstatic-music-server-plan.md  2026-07-10-001-feat-plugin-stability-status-plan.md
scripts/: build-mpv-updater-manifest.mjs  bump.mjs  convert-screenshots.mjs  deploy-site-vps.ps1  fetch-libmpv.mjs  generate-changelog.mjs  generate-history.mjs  libmpv.lock.json  package-engine-component.mjs  regen-features.mjs
scripts/lib/: changelog.mjs  features.mjs  version.d.mts  version.mjs
src/: App.css  App.tsx  base.css  design-system.css  eqPresets.ts  fallbackProviders.ts  heroEffectMode.ts  heroLooks.ts  likeKeys.ts  main.tsx  mainPlaylist.ts  nativeMenu.ts  queueEntry.ts  queueNav.ts  searchProviders.ts  skinUtils.ts  sortChain.ts  startupTiming.ts  store.ts  streamResolvers.ts  telemetry.ts  trackEvents.ts  types.ts  utils.ts  videoFrameQueue.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  engine-component.lock.json  tauri.conf.json  tauri.macos.conf.json  tauri.mpv-macos.conf.json  tauri.mpv-windows.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: browse-windows-remote.json  browse-windows.json  default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: browse-window-send.toml
src-tauri/plugins/allmusic/: index.js  manifest.json
src-tauri/plugins/audiodb/: index.js  manifest.json
src-tauri/plugins/auto-tagger/: index.js  manifest.json
src-tauri/plugins/deezer/: index.js  manifest.json
src-tauri/plugins/duplicate-finder/: index.js  manifest.json
src-tauri/plugins/genius/: index.js  manifest.json
src-tauri/plugins/google-image-search/: index.js  manifest.json
src-tauri/plugins/google-lyrics/: index.js  manifest.json
src-tauri/plugins/greek-lyrics/: index.js  manifest.json
src-tauri/plugins/itunes/: index.js  manifest.json
src-tauri/plugins/lastfm/: index.js  manifest.json
src-tauri/plugins/lastfm-info/: index.js  manifest.json
src-tauri/plugins/library-stats/: index.js  manifest.json
src-tauri/plugins/lrclib/: index.js  manifest.json
src-tauri/plugins/lyrics-ovh/: index.js  manifest.json
src-tauri/plugins/lyrics-search/: index.js  manifest.json
src-tauri/plugins/mock-download/: index.js  manifest.json
src-tauri/plugins/musicbrainz/: index.js  manifest.json
src-tauri/plugins/p2p-sharing/: index.js  manifest.json
src-tauri/plugins/search-providers/: index.js  manifest.json
src-tauri/plugins/spotify-browse/: SPEC.md  index.js  jsguide.md  manifest.json
src-tauri/plugins/subsonic-browse/: index.js  manifest.json
src-tauri/plugins/tidal-browse/: index.js  manifest.json
src-tauri/plugins/youtube/: index.js  manifest.json
src-tauri/src/: album_image.rs  artist_image.rs  browse_window.rs  bundle_ref.rs  commands.rs  composite_image.rs  cursor_tracker.rs  cursor_tracker_win.rs  db.rs  dependencies.rs  downloader.rs  entity_image.rs  genius.rs  lastfm.rs  lib.rs  logging.rs  main.rs  main_playlist.rs  manifest_sync.rs  mixtape.rs  models.rs  music_publish.rs  musicgateway.rs  plugins.rs  profile_shortcuts.rs  profiles.rs  publish_server.rs  scanner.rs  seed.rs  skins.rs  subsonic.rs  sync.rs  tag_image.rs  tag_writer.rs  tape.rs  telemetry.rs  tidal.rs  timing.rs  transcode_server.rs  update_checker.rs  (+2 more)
src-tauri/src/commands/: app.rs  collections.rs  downloads.rs  extensions.rs  history.rs  images.rs  library.rs  main_playlist.rs  media.rs  mixtapes.rs  mod.rs  mpv_engine.rs  p2p.rs  playlists.rs  plugin_files.rs  plugins.rs  publish.rs  skins_cmd.rs  transcode.rs  updates.rs  waveforms.rs  youtube.rs
src-tauri/src/db/: albums.rs  artists.rs  auto_playlists.rs  collections.rs  history.rs  image_failures.rs  likes.rs  mod.rs  playlists.rs  plugin_storage.rs  providers.rs  publish_servers.rs  search.rs  tags.rs  tests.rs  tracks.rs
src-tauri/src/image_provider/: audiodb.rs  deezer.rs  embedded.rs  itunes.rs  mod.rs  musicbrainz.rs  tidal.rs
src-tauri/src/lyric_provider/: lrclib.rs  mod.rs
src-tauri/src/mpv_engine/: af.rs  api.rs  component.rs  ffi.rs  mod.rs  video_layer.rs  video_layer_win.rs
src-tauri/src/p2p/: discovery.rs  handler.rs  mod.rs  protocols.rs  swarm.rs
src/__tests__/: DetailHero.test.tsx  DetailHeroBackground.test.tsx  DetailHeroEffect.test.tsx  autoPlaylist.test.ts  autoSave.test.ts  autoTagger.test.ts  bitPerfect.test.ts  builtinDownloadQualities.test.ts  bulkEditTags.test.ts  bumpVersion.test.ts  computeRowSelection.test.ts  computeSelection.test.ts  deleteTracks.test.ts  downloadPlan.test.ts  eqCurve.test.ts  (+67 more)
website/: download.html  features.html  index.html
(+380 files in other folders)
