[package]
name = "viboplr"
version = "0.9.1"
description = "Viboplr — lightweight audio player"
authors = ["you"]
edition = "2021"

[lib]
name = "viboplr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"

rusqlite = { version = "0.32", features = ["bundled", "functions"] }
regex = "1"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
md5 = "0.7"
tauri-plugin-store = "2"
unicode-normalization = "0.1"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
base64 = "0.22"
urlencoding = "2"
encoding_rs = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

