[package]
name = "viboplr"
version = "0.9.172"
description = "Viboplr — lightweight audio player"
authors = ["outcast1000"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "viboplr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.24"

rusqlite = { version = "0.39", features = ["bundled", "functions"] }
regex = "1"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
reqwest = { version = "0.13", features = ["blocking", "json", "multipart"] }
md5 = "0.8"
tauri-plugin-store = "2"
unicode-normalization = "0.1"
deunicode = "1"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
encoding_rs = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
arboard = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
libp2p = { version = "=0.56", features = [
    "tokio", "tcp", "quic", "request-response", "relay",
    "dcutr", "autonat", "identify", "ping", "dns", "noise",
    "yamux", "json", "macros"
] }
futures = "0.3"
async-trait = "0.1"
trash = "5"
tauri-plugin-aptabase = "1.0.0"

# Process-group kill for timed-out dependency version probes (dependencies.rs).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# Pure-Rust .lnk writer for per-profile desktop shortcuts (Windows only).
[target.'cfg(windows)'.dependencies]
mslnk = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# No build features. There is a single build flavor: the native engine is
# compiled into every build and libmpv ships bundled (see the per-platform
# tauri.{macos,windows}.conf.json overlays); it is also resolvable at runtime
# from the downloaded component / vendored / system copy (src/mpv_engine/ffi.rs).
# Engine tests need the vendored artifacts: run `node scripts/fetch-libmpv.mjs`
# first or they self-skip.

